# nabu-network-adapter

./: .gitignore  README.md
hardware/nabu-na-demod/: motorola.kicad_sym  nabu-na-demod.kicad_pro  nabu-na-demod.kicad_sch  sym-lib-table
hardware/nabu-na-logic/: descrambler.kicad_sch  intel.kicad_sym  mmi.kicad_sym  motorola.kicad_sym  nabu-na-logic.kicad_pro  nabu-na-logic.kicad_sch  processor.kicad_sch  signetics.kicad_sym  sym-lib-table  western_digital.kicad_sym
software/gr-nabu/: CMakeLists.txt  MANIFEST.md
software/gr-nabu-na/: .gitignore  nabu_differential_encoder_check.grc  nabu_oqpsk_modulator.grc  nabu_scrambler_check.grc
software/gr-nabu/.conda/: README.md
software/gr-nabu/.conda/recipe/: meta.yaml
software/gr-nabu/apps/: CMakeLists.txt
software/gr-nabu/cmake/Modules/: gnuradio-nabuConfig.cmake
software/gr-nabu/docs/: CMakeLists.txt  README.nabu
software/gr-nabu/docs/doxygen/: CMakeLists.txt  Doxyfile.in
software/gr-nabu/grc/: CMakeLists.txt  nabu_differential_encoder.block.yml  nabu_symbols_to_complex.block.yml
software/gr-nabu/lib/: CMakeLists.txt  differential_encoder_impl.cc  differential_encoder_impl.h  symbols_to_complex_impl.cc  symbols_to_complex_impl.h
software/gr-nabu/python/nabu/: CMakeLists.txt  __init__.py  qa_differential_encoder.py  qa_symbols_to_complex.py
software/gr-nabu/python/nabu/bindings/: CMakeLists.txt  differential_encoder_python.cc  python_bindings.cc  symbols_to_complex_python.cc
software/gr-nabu/python/nabu/bindings/docstrings/: differential_encoder_pydoc_template.h  symbols_to_complex_pydoc_template.h
(+10 files in other folders)
